plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0' // Spring Boot 버전
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example.first'
version = '0.0.1-SNAPSHOT'

java {
    // 로그에서 확인된 JDK 버전
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
  //Spring Boot Core
  implementation 'org.springframework.boot:spring-boot-starter'
  implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-validation'

  //Lombok
  implementation 'org.projectlombok:lombok'
  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'
  
  //Spring Boot Dev/Test
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  // Youtube API
  implementation 'com.google.api-client:google-api-client:1.33.0'
  implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
  implementation 'com.google.apis:google-api-services-youtube:v3-rev20230816-2.0.0'
  implementation 'com.google.http-client:google-http-client-jackson2:1.39.2'

  // 인메모리 DB (개발용)
  runtimeOnly 'com.h2database:h2'
  runtimeOnly 'com.mysql:mysql-connector-j'

  //Auth/JWT
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // OAuth2 클라이언트 (로그에서 확인)
  implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

  // 6. API Documentation (Swagger/Springdoc)
  // Springdoc OpenAPI Starter WebMVC UI (로그에서 확인)
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    implementation 'org.jsoup:jsoup:1.17.2'
    implementation 'org.apache.commons:commons-text:1.10.0'
}

tasks.named('test') {
    useJUnitPlatform()
}